# IDO4PoissonEq

./: .gitignore  CMakeLists.txt  IDO4Poissons.files  Makefile  Plot_colormap  README.md  lines_of_level
inc/: cross.h  grid.h  gs-ido.h  ido_original.h
src/: cross.c  grid.c  grid.h  gs-ido.c  ido_original.c  main.c  main_cross.c  main_cross_CFD.c  main_ido_cfd.c  main_test.c
